cluster-resources/prometheus/ingress.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: prometheus.lucascajal.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: kube-prometheus-stack-prometheus
#                 port:
#                   number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.lucascajal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
